Fixed an issue with being able to scroll down past visibile content.

--- a/src/PlanningListFilterer/wwwroot/css/app.css
+++ b/src/PlanningListFilterer/wwwroot/css/app.css
@@ -91,3 +91,9 @@ a, .btn-link {
 	overflow-y: auto;
 	max-height: 250px;
 }
+
+/* Popover provider would extend past sidebar/page bottom without this */
+/* Doesn't work when applied to #id */
+body {
+	overflow-y: clip;
+}
